--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
-    "@shopify/restyle": "^2.4.2",
+    "@shopify/restyle": "2.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.73.6",
+    "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
