--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "ios-15": "react-native run-ios --simulator='iPhone 15 Pro'",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "dev-tools": "npx react-devtools"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "@shopify/restyle": "2.0.0",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.30.1",
     "react-native-svg": "^15.1.0"
   },
   "devDependencies": {
